export const snapshot = {};

snapshot[`select prompt with groups and breadcrumb > should render breadcrumb 1`] = `
stdout:
"? Select an option
❯ 📁 Foo\\x1b[1A\\x1b[0G\\x1b[?25l\\x1b[G\\x1b[0J
? Select an option
  📂 Foo
 ❯ 📁 Bar\\x1b[2A\\x1b[0G\\x1b[?25l\\x1b[G\\x1b[0J
? Select an option
  📂 Foo › Bar
 ❯ 📁 Baz\\x1b[2A\\x1b[0G\\x1b[?25l\\x1b[G\\x1b[0J
? Select an option
  📂 Foo › Bar › Baz
 ❯ 📁 Beep\\x1b[2A\\x1b[0G\\x1b[?25l\\x1b[G\\x1b[0J
? Select an option
  📂 Foo › Bar › Baz › Beep
 ❯ 📁 Boop\\x1b[2A\\x1b[0G\\x1b[?25l\\x1b[G\\x1b[0J
? Select an option
  📂 Foo › .. › Baz › Beep › Boop
 ❯ 📁 Fiz\\x1b[2A\\x1b[0G\\x1b[?25l\\x1b[G\\x1b[0J
? Select an option
  📂 Foo › .. › Beep › Boop › Fiz
 ❯ Faz\\x1b[2A\\x1b[0G\\x1b[?25l\\x1b[G\\x1b[0J
? Select an option › Faz
\\x1b[?25h\\x1b[?25h"
stderr:
""
`;

snapshot[`select prompt with custom breadcrumb separator > should render breadcrumb 1`] = `
stdout:
"? Select an option
❯ 📁 Foo\\x1b[1A\\x1b[0G\\x1b[?25l\\x1b[G\\x1b[0J
? Select an option
  📂 Foo
 ❯ 📁 Bar\\x1b[2A\\x1b[0G\\x1b[?25l\\x1b[G\\x1b[0J
? Select an option
  📂 Foo # Bar
 ❯ 📁 Baz\\x1b[2A\\x1b[0G\\x1b[?25l\\x1b[G\\x1b[0J
? Select an option
  📂 Foo # Bar # Baz
 ❯ 📁 Beep\\x1b[2A\\x1b[0G\\x1b[?25l\\x1b[G\\x1b[0J
? Select an option
  📂 Foo # Bar # Baz # Beep
 ❯ 📁 Boop\\x1b[2A\\x1b[0G\\x1b[?25l\\x1b[G\\x1b[0J
? Select an option
  📂 Foo # .. # Baz # Beep # Boop
 ❯ 📁 Fiz\\x1b[2A\\x1b[0G\\x1b[?25l\\x1b[G\\x1b[0J
? Select an option
  📂 Foo # .. # Beep # Boop # Fiz
 ❯ Faz\\x1b[2A\\x1b[0G\\x1b[?25l\\x1b[G\\x1b[0J
? Select an option › Faz
\\x1b[?25h\\x1b[?25h"
stderr:
""
`;
